Update spacing scale docs

--- a/src/pages/docs/customizing-colors.mdx
+++ b/src/pages/docs/customizing-colors.mdx
@@ -10,7 +10,7 @@ import { TipGood, TipBad } from '@/components/Tip'
 
 ## <Heading hidden>Overview</Heading>
 
-Tailwind includes an expertly-crafted color palette out of the box that is a great starting point if you don't have your own branding ready to go, but for most projects the color palette is the first you will want to customize.
+Tailwind includes an expertly-crafted default color palette that is a great starting point if you don't have your own branding ready to go, but for most projects the color palette is the first thing you'll want to customize.
 
 ```js
 // The default Tailwind color palette
@@ -42,7 +42,7 @@ You can customize the color palette in your project using the `colors` key in th
 
 ## Curating colors
 
-If you don't have a set of completely custom colors in mind for your project, you can curate a palette from our complete color palette by importing `'tailwindcss/colors'` into your config file and choosing the colors you like.
+If you don't have a set of completely custom colors in mind for your project, you can curate your colors from our complete color palette by importing `'tailwindcss/colors'` into your config file and choosing the colors you like.
 
 ```js
 // tailwind.config.js
@@ -60,7 +60,7 @@ module.exports = {
 }
 ```
 
-See our complete color palette reference to see the colors that are available to choose from by default.
+See our [complete color palette reference](#color-palette-reference) to see the colors that are available to choose from by default.
 
 ---
 
